# backgammon

./: .gitignore  CMakeLists.txt
board/: algorithm.h  board.h  dice.cpp  dice.h  move.h  position.cpp  position.h
board_test/: algorithm.cpp  position.cpp
core/: algorithm.cpp  algorithm.h  core.h  dice.cpp  dice.h  halfpos.cpp  halfpos.h  move.cpp  move.h  position.cpp  position.h  probdist.cpp  probdist.h
core_test/: algorithm.cpp  dice.cpp  halfpos.cpp  move.cpp  position.cpp
hyper/: main.cpp
perft/: perft.cpp
search/: endgame.cpp  endgame.h  search.cpp  search.h
search_benchmark/: endgame.cpp
search_test/: endgame.cpp
src/: main.cpp
